--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,7 @@
   <title>BeyondGPA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/beyond-gpa.png">
+  <link rel="icon" type="image/x-icon" href="./assets/beyond-gpa.jpg">
 </head>
 <body>
   <app-root></app-root>
