--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,10 +4,73 @@
   <meta charset="utf-8">
   <meta name="google-site-verification" content="FY4TkChu-98nOGul6TmnxwfZ8nikPrTVYWEJ-yWNu94" />
 
-  <title>BeyondGPA</title>
+  <!-- Primary SEO Meta Tags -->
+  <title>BeyondGPA - Education Career Success Analytics | Data Visualization Platform</title>
+  <meta name="title" content="BeyondGPA - Education Career Success Analytics | Data Visualization Platform">
+  <meta name="description" content="BeyondGPA is an interactive data visualization platform exploring the relationship between education and career success. Discover insights beyond traditional GPA metrics through advanced analytics and visual storytelling.">
+  <meta name="keywords" content="BeyondGPA, education analytics, career success, data visualization, GPA analysis, educational insights, career development, student success metrics, education data">
+  <meta name="author" content="BeyondGPA Team">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Technical Meta Tags -->
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="canonical" href="https://beyondgpa.github.io/">
+  
+  <!-- Favicon and Icons -->
   <link rel="icon" type="image/x-icon" href="./assets/beyondGPA.png">
+  <link rel="shortcut icon" href="./assets/beyondGPA.png">
+  <link rel="apple-touch-icon" href="./assets/beyondGPA.png">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://beyondgpa.github.io/">
+  <meta property="og:title" content="BeyondGPA - Education Career Success Analytics">
+  <meta property="og:description" content="Interactive data visualization platform exploring the relationship between education and career success. Discover insights beyond traditional GPA metrics.">
+  <meta property="og:image" content="https://beyondgpa.github.io/assets/beyondGPA.png">
+  <meta property="og:site_name" content="BeyondGPA">
+  <meta property="og:locale" content="en_US">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://beyondgpa.github.io/">
+  <meta property="twitter:title" content="BeyondGPA - Education Career Success Analytics">
+  <meta property="twitter:description" content="Interactive data visualization platform exploring the relationship between education and career success. Discover insights beyond traditional GPA metrics.">
+  <meta property="twitter:image" content="https://beyondgpa.github.io/assets/beyondGPA.png">
+  
+  <!-- Additional SEO Meta Tags -->
+  <meta name="theme-color" content="#191034">
+  <meta name="msapplication-TileColor" content="#191034">
+  <meta name="application-name" content="BeyondGPA">
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "BeyondGPA",
+    "alternateName": "BeyondGPA - Education Career Success Analytics",
+    "url": "https://beyondgpa.github.io/",
+    "description": "Interactive data visualization platform exploring the relationship between education and career success. Discover insights beyond traditional GPA metrics through advanced analytics and visual storytelling.",
+    "author": {
+      "@type": "Organization",
+      "name": "BeyondGPA Team"
+    },
+    "mainEntity": {
+      "@type": "SoftwareApplication",
+      "name": "BeyondGPA",
+      "applicationCategory": "EducationalApplication",
+      "operatingSystem": "Web Browser",
+      "description": "Data visualization platform for education and career success analytics",
+      "url": "https://beyondgpa.github.io/"
+    },
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://beyondgpa.github.io/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
 </head>
 <body>
   <app-root></app-root>
